--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.2.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
@@ -18,8 +19,10 @@
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
     "react-router": "^6.6.1",
+    "react-router-dom": "^6.6.1",
     "react-spinners": "^0.13.7",
-    "react-toastify": "^9.1.1"
+    "react-toastify": "^9.1.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
