--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.2.3",
+    "@types/react-modal": "^3.13.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
