--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.2.3",
     "@types/react-modal": "^3.13.1",
+    "chart.js": "^4.2.0",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-countup": "^6.4.0",
     "react-date-picker": "^9.1.0",
