--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-color": "^2.19.3",
     "react-countup": "^6.4.0",
     "react-date-picker": "^9.1.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-modal": "^3.16.1",
@@ -26,6 +27,7 @@
     "react-router-dom": "^6.6.1",
     "react-spinners": "^0.13.7",
     "react-toastify": "^9.1.1",
+    "react-tooltip": "^5.10.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
