--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.2.0",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "framer-motion": "^10.9.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
